[tool.poetry]
name = "dotmac-middleware-suite"
version = "1.0.0"
description = "Unified middleware suite for DotMac Framework - request processing and security middleware"
authors = ["DotMac Team <support@dotmac.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "dotmac_middleware"}
]

[tool.poetry.dependencies]
python = "^3.12"

# Core FastAPI and ASGI support
fastapi = "^0.109.0"
starlette = "^0.36.3"

# Security and validation
pydantic = "^2.5.3"
cryptography = "^45.0.6"
bleach = "^6.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

# Caching and session management
redis = {extras = ["hiredis"], version = "^5.0.1"}
python-memcached = "^1.62"

# Database integration
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"

# Monitoring and observability
structlog = "^25.4.0"
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.42b0"

# Network and HTTP utilities
httpx = "^0.26.0"
user-agents = "^2.2.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-mock = "^3.11.1"
black = "^24.1.1"
ruff = "^0.2.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

## Ruff configuration is centralized in the repository root pyproject.toml
## This local section was removed to avoid conflicts and ensure consistency.

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "security: Security-focused tests",
    "performance: Performance tests"
]
