[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dotmac-notifications"
description = "Notification service for DotMac Framework"
authors = [{name = "DotMac Framework Team", email = "dev@dotmac.com"}]
license = {text = "MIT"}
readme = "../omnichannel/README.md"  # Shares with omnichannel
requires-python = ">=3.9"
keywords = ["notifications", "email", "sms", "messaging"]
dynamic = ["version"]

dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "structlog>=23.0.0,<24.0.0",
    "dotmac-omnichannel",
]

[tool.setuptools]
packages = ["dotmac_shared.notifications"]
include-package-data = true
