[tool.poetry]
name = "dotmac-secrets"
version = "1.0.0"
description = "Enterprise secrets management package for the DotMac Framework"
authors = ["DotMac Team <dev@dotmac.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dotmac-framework/dotmac-secrets"
documentation = "https://docs.dotmac.com/secrets"
repository = "https://github.com/dotmac-framework/dotmac-secrets"
packages = [
    {include = "dotmac_shared"}
]
keywords = [
    "secrets-management",
    "vault",
    "openbao",
    "encryption",
    "rbac",
    "enterprise",
    "security",
    "compliance"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10"

# Core dependencies - minimal required packages
pydantic = "^2.0.0"
structlog = "^23.0.0"

# Optional dependencies for different features
hvac = {version = "^2.0.0", optional = true}
requests = {version = "^2.31.0", optional = true}
cryptography = {version = "^41.0.0", optional = true}
bcrypt = {version = "^4.0.0", optional = true}
httpx = {version = "^0.25.0", optional = true}
asyncio-throttle = {version = "^1.0.0", optional = true}
prometheus-client = {version = "^0.18.0", optional = true}

[tool.poetry.extras]
vault = ["hvac", "requests"]
encryption = ["cryptography", "bcrypt"]
async = ["httpx", "asyncio-throttle"]
monitoring = ["prometheus-client"]
all = [
    "hvac",
    "requests",
    "cryptography",
    "bcrypt",
    "httpx",
    "asyncio-throttle",
    "prometheus-client"
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/dotmac-framework/dotmac-secrets/issues"
"Changelog" = "https://github.com/dotmac-framework/dotmac-secrets/blob/main/CHANGELOG.md"
