[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotmac-ticketing"
version = "1.0.0"
description = "Universal ticketing system for customer support and service management"
readme = "README.md"
authors = [
    { name = "DotMac Framework Team" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "ticketing",
    "support",
    "helpdesk",
    "customer-service",
    "service-management"
]
requires-python = ">=3.8"
dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "alembic>=1.10.0",
    "asyncpg>=0.28.0",
    "fastapi>=0.100.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

testing = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "coverage[toml]>=7.0.0",
]

workflows = [
    "celery>=5.3.0",
    "redis>=4.5.0",
]

notifications = [
    "aiosmtplib>=2.0.0",
    "jinja2>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/dotmac-framework/ticketing"
Documentation = "https://dotmac-ticketing.readthedocs.io"
Repository = "https://github.com/dotmac-framework/ticketing.git"
Issues = "https://github.com/dotmac-framework/ticketing/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dotmac_shared.ticketing*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=dotmac_shared.ticketing",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["dotmac_shared/ticketing"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
